footer qayta togirlandi

--- a/index.html
+++ b/index.html
@@ -324,46 +324,46 @@
 
       <div class="slider_img">
         <div class="owl-carousel owl-theme"> -->
-          <!-- ==============item 1============== -->
-          <!-- <div class="item"> -->
-            <!-- ======================item img========= -->
-            <!-- <div class="item_img">
+    <!-- ==============item 1============== -->
+    <!-- <div class="item"> -->
+    <!-- ======================item img========= -->
+    <!-- <div class="item_img">
               <img src="./images/slider_1.png" alt="" />
             </div> -->
-            <!-- =========item text========== -->
-            <!-- <div class="item_text">
+    <!-- =========item text========== -->
+    <!-- <div class="item_text">
               <h3>Washington D.C</h3>
             </div> -->
-            <!-- ===============item button============== -->
-            <!-- <div class="item_btn">
+    <!-- ===============item button============== -->
+    <!-- <div class="item_btn">
               <button>Virtual Tour</button>
             </div>
           </div> -->
-          <!-- ==============iytem 2=========== -->
-          <!-- <div class="item">
+    <!-- ==============iytem 2=========== -->
+    <!-- <div class="item">
             <div class="item_img">
               <img src="./images/slider_2.png" alt="" />
             </div> -->
-            <!-- =========item text========== -->
-            <!-- <div class="item_text">
+    <!-- =========item text========== -->
+    <!-- <div class="item_text">
               <h3>Washington D.C</h3>
             </div> -->
-            <!-- ====================item button========= -->
-            <!-- <div class="item_btn">
+    <!-- ====================item button========= -->
+    <!-- <div class="item_btn">
               <button>Virtual Tour</button>
             </div>
           </div> -->
-          <!-- =================item 3============= -->
-          <!-- <div class="item">
+    <!-- =================item 3============= -->
+    <!-- <div class="item">
             <div class="item_img">
               <img src="./images/slider_3.png" alt="" />
             </div> -->
-            <!-- =========item text========== -->
-            <!-- <div class="item_text">
+    <!-- =========item text========== -->
+    <!-- <div class="item_text">
               <h3>Washington D.C</h3>
             </div> -->
-            <!-- ====================item button========= -->
-            <!-- <div class="item_btn">
+    <!-- ====================item button========= -->
+    <!-- <div class="item_btn">
               <button>Virtual Tour</button>
             </div>
           </div>
@@ -428,108 +428,214 @@
         </div>
       </div>
     </div>
-<!-- =============================sports and======================= -->
-
-<div class="footer">
-    <div class="footer_compus">
-    <div class="footer_text">
-        <h4>Campus Life</h4>
-        <ul class="footer_ul">
-            <li>
-               <a href=""> <i class="fa-solid fa-angle-right"></i><p> Accessibility</p></a>
-
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Financial Aid</p></a>
-            </li>
-            <li>
-                <a href=""><i class="fa-solid fa-angle-right"></i><p>  Food Services</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Housing</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Information Technologies</p></a>
-            </li>
-            <li>
-                <a href=""><i class="fa-solid fa-angle-right"></i><p>  Student Life</p></a>
-            </li>
-        </ul>
+    <!-- =============================sports and======================= -->
+    <!-- ====================================footer==================== -->
+    <div class="footer_bg">
+      <div class="footer">
+        <div class="footer_compus">
+          <div class="footer_text">
+            <h4>Campus Life</h4>
+            <ul class="footer_ul">
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Accessibility</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Financial Aid</p></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa-solid fa-angle-right"></i>
+                  <p>Food Services</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Housing</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Information Technologies</p></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa-solid fa-angle-right"></i>
+                  <p>Student Life</p></a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer_text">
+            <h4>Our Campus</h4>
+            <ul class="footer_ul">
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Academic</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Planning & Administration</p></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa-solid fa-angle-right"></i>
+                  <p>Campus Safety</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Office of the Chancellor</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Facility Services</p></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa-solid fa-angle-right"></i>
+                  <p>Human Resources</p></a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer_text">
+            <h4>Academics</h4>
+            <ul class="footer_ul">
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Canvas</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Catalyst</p></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa-solid fa-angle-right"></i>
+                  <p>Time Schedule</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Apply For Admissions</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Pay My Tuition</p></a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer_text">
+            <h4>Information For</h4>
+            <ul class="footer_ul">
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>How To Apply</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Dates & Deadlines</p></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa-solid fa-angle-right"></i>
+                  <p>Student Activities</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Support & Guidance</p></a
+                >
+              </li>
+              <li>
+                <a href="">
+                  <i class="fa-solid fa-angle-right"></i>
+                  <p>Schedule A Tour</p></a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><i class="fa-solid fa-angle-right"></i>
+                  <p>Faculty & Staffs</p></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!--==============================footer school =======================-->
+      <div class="footer_school">
+        
+        <div class="footer_canyon">
+            <div class="footer_position">
+                <img src="./images/footer_Logo.png" alt="">
+            </div>
+          <div class="footer_schooltext">
+            <p>
+              Copyright© <a href="">Canyon</a>, All rights reserved.
+            </p>
+          </div>
+          <div class="footer_link">
+            <ul>
+              <li><a href="">Privacy Policy</a></li>
+              <li><a href="">Cookie Policy</a></li>
+              <li>
+                <a class="icon_link" href="">
+                  <i class="telofon_icon fa-brands fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a class="icon_link" href=""
+                  ><i
+                    class="telofon_icon fa-brands fa-square-instagram"
+                  ></i
+                ></a>
+              </li>
+              <li>
+                <a class="icon_link" href="">
+                  <i class="telofon_icon fa-brands fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a class="icon_link" href="">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="footer_text">
-        <h4>Our Campus</h4>
-        <ul class="footer_ul">
-            <li>
-               <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Academic</p></a>
-
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Planning & Administration</p></a>
-            </li>
-            <li>
-                <a href=""><i class="fa-solid fa-angle-right"></i><p>  Campus Safety</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>   Office of the Chancellor</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>   Facility Services</p></a>
-            </li>
-            <li>
-                <a href=""><i class="fa-solid fa-angle-right"></i><p> Human Resources</p></a>
-            </li>
-        </ul>
-    </div>
-    <div class="footer_text">
-        <h4>Academics</h4>
-        <ul class="footer_ul">
-            <li>
-               <a href=""> <i class="fa-solid fa-angle-right"></i><p> Canvas</p></a>
-
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p> Catalyst</p></a>
-            </li>
-            <li>
-                <a href=""><i class="fa-solid fa-angle-right"></i><p> Time Schedule</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p> Apply For Admissions</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Pay My Tuition</p></a>
-            </li>
-        </ul>
-    </div>
-    <div class="footer_text">
-        <h4>Information For</h4>
-        <ul class="footer_ul">
-            <li>
-               <a href=""> <i class="fa-solid fa-angle-right"></i><p> How To Apply</p></a>
-
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Dates & Deadlines</p></a>
-            </li>
-            <li>
-                <a href=""><i class="fa-solid fa-angle-right"></i><p>   Student Activities</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p>  Support & Guidance</p></a>
-            </li>
-            <li>
-                <a href=""> <i class="fa-solid fa-angle-right"></i><p> Schedule A Tour</p></a>
-            </li>
-            <li>
-                <a href=""><i class="fa-solid fa-angle-right"></i><p> Faculty & Staffs</p></a>
-            </li>
-        </ul>
-    </div>
-</div>
-
-<!--==============================footer school -->
-</div>
-
     <!-- ===================footer==================== -->
 
     <!-- =================carusel cdn jquare======= -->
