--- a/index.html
+++ b/index.html
@@ -429,6 +429,36 @@
       </div>
     </div>
     <!-- =============================sports and======================= -->
+
+    <!-- ==============new card================= -->
+    <div class="new">
+      <div class="new_text">
+        <p>News and Events</p>
+        <h2>Recent Important Stories Updated</h2>
+      </div>
+
+      <div class="new_feature">
+        <div class="new_feature_img">
+          <img src="./images/new_img_1.png" alt="" />
+        </div>
+        <div class="w_feature_text">
+          <div class="w_feature_btn">
+            <button>Featured News</button>
+            <a href=""> <i  class= "new_square fa-solid fa-up-right-from-square"></i></a>
+          </div>
+          <div class="w_feature_subtext">
+            <h2>Celebrating Hispanic Heritage Month: Sioma Waisburd</h2>
+            <p class="new_data">October 06, 2024</p>
+            <p class="new_data" >
+              There are many variations of passages of Lorem Ipsum
+              available, but the majority havesu fered alteration in
+              some form, by injected humour.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- ====================================footer==================== -->
     <div class="footer_bg">
       <div class="footer">
@@ -595,11 +625,10 @@
       </div>
       <!--==============================footer school =======================-->
       <div class="footer_school">
-        
         <div class="footer_canyon">
-            <div class="footer_position">
-                <img src="./images/footer_Logo.png" alt="">
-            </div>
+          <div class="footer_position">
+            <img src="./images/footer_Logo.png" alt="" />
+          </div>
           <div class="footer_schooltext">
             <p>
               Copyright© <a href="">Canyon</a>, All rights reserved.
@@ -636,7 +665,7 @@
         </div>
       </div>
     </div>
-    <!-- ===================footer==================== -->
+    <!-- ===================footer and==================== -->
 
     <!-- =================carusel cdn jquare======= -->
     <script
